--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,6 @@ Build resources:
   script:
     - sam build
     - sam package --output-template-file packaged.yaml --s3-bucket first-sam-app-2nd-actually-s3bucket-1fqra0mlgvqdq
-    - sam deploy --template-file packaged.yaml --stack-name first-sam-app-2nd-actually --s3-bucket first-sam-app-2nd-actually-s3bucket-1fqra0mlgvqdq --capabilities CAPABILITY_IAM --region ap-southeast-2
+    - sam deploy --template-file packaged.yaml --stack-name first-sam-app-2nd-actually --s3-bucket first-sam-app-2nd-actually-s3bucket-1fqra0mlgvqdq --capabilities CAPABILITY_IAM --region ap-southeast-2 --no-confirm-changeset
     
     
