--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,13 @@
 stages:
-  - buildDeployTest
+  - buildTestDeploy
 
 Build resources:
-  stage: buildDeployTest
+  stage: buildTestDeploy
   image: registry.gitlab.com/abhishekcs96/serverless_backend/nodepython:latest
   script:
     - sam build
-    - sam package --output-template-file packaged.yaml --s3-bucket first-sam-app-2nd-actually-s3bucket-1fqra0mlgvqdq
+    - sam local invoke -e ./Lambda/app_event.json UpdateTablefnc
+    - sam local invoke -e ./Node/sendEmail_event.json EmailFormfnc
     - sam deploy --template-file packaged.yaml --stack-name first-sam-app-2nd-actually --s3-bucket first-sam-app-2nd-actually-s3bucket-1fqra0mlgvqdq --capabilities CAPABILITY_IAM --region ap-southeast-2 --no-confirm-changeset
     
     
