--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,12 @@ stages:
 Build resources:
   stage: buildTestDeploy
   image: registry.gitlab.com/abhishekcs96/serverless_backend/nodepython:latest
+  services:
+    - docker:latest-dind
   script:
     - sam build
     - sam local invoke -e ./Lambda/app_event.json UpdateTablefnc
     - sam local invoke -e ./Node/sendEmail_event.json EmailFormfnc
-    - sam deploy --template-file packaged.yaml --stack-name first-sam-app-2nd-actually --s3-bucket first-sam-app-2nd-actually-s3bucket-1fqra0mlgvqdq --capabilities CAPABILITY_IAM --region ap-southeast-2 --no-confirm-changeset
+    - sam deploy --template-file packaged.yaml --stack-name first-sam-app-2nd-actually --s3-bucket first-sam-app-2nd-actually-s3bucket-1fqra0mlgvqdq --capabilities CAPABILITY_IAM --region ap-southeast-2 --no-confirm-changeset --no-fail-on-empty-changeset
     
     
