--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,10 @@ Build resources:
     - docker:dind
   script:
     - docker --version
+    - docker start
     - sam build
-    - sam local invoke -e ./Lambda/app_event.json UpdateTablefnc
-    - sam local invoke -e ./Node/sendEmail_event.json EmailFormfnc
+    - sudo sam local invoke -e ./Lambda/app_event.json UpdateTablefnc
+    - sudo sam local invoke -e ./Node/sendEmail_event.json EmailFormfnc
     - sam deploy --template-file packaged.yaml --stack-name first-sam-app-2nd-actually --s3-bucket first-sam-app-2nd-actually-s3bucket-1fqra0mlgvqdq --capabilities CAPABILITY_IAM --region ap-southeast-2 --no-confirm-changeset --no-fail-on-empty-changeset
     
     
