--- a/template.yml
+++ b/template.yml
@@ -30,10 +30,8 @@ Resources:
             Effect: Allow
             Principal: '*'
             Action: 's3:GetObject'
-            Resource: 'arn:aws:s3:::'
-                - !Ref BackupBucket
-                - /*
-      Bucket: !Ref BackupBucket
+            Resource: 'arn:aws:s3:::first-sam-app-2nd-actually-backupbucket-1na35pkmjtc4v'
+        Bucket: !Ref BackupBucket
 
         
 # Lambda functions here     
