--- a/template.yml
+++ b/template.yml
@@ -121,7 +121,7 @@ Outputs: # This will be printed to the console when the deployment finishes,
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/contact/"
   WebsiteURL:
     Value: !GetAtt 
-      - S3Bucket
+      - BackupBucket
       - WebsiteURL
     Description: URL for website hosted on S3
   S3BucketSecureURL:
@@ -129,6 +129,6 @@ Outputs: # This will be printed to the console when the deployment finishes,
       - ''
       - - 'https://'
         - !GetAtt 
-          - S3Bucket
+          - BackupBucket
           - DomainName
     Description: Name of S3 bucket to hold website content
