--- a/template.yml
+++ b/template.yml
@@ -14,6 +14,18 @@ Resources:
   BackupBucket:
     Type: AWS::S3::Bucket
     Properties:
+      BucketName: s3-achandrasekar
+      CorsConfiguration:
+        CorsRules:
+          - AllowedHeaders:
+              - '*'
+            AllowedMethods:
+              - GET
+              - PUT
+              - POST
+            AllowedOrigins:
+              - '*'
+            MaxAge: '3600' 
       AccessControl: PublicRead
       WebsiteConfiguration: 
         IndexDocument: index.html
