--- a/template.yml
+++ b/template.yml
@@ -14,7 +14,7 @@ Resources:
   BackupBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: s3-achandrasekar
+      BucketName: backup
       CorsConfiguration:
         CorsRules:
           - AllowedHeaders:
