--- a/template.yml
+++ b/template.yml
@@ -11,10 +11,10 @@ Resources:
   S3Bucket:
     Type: AWS::S3::Bucket
 
-  BackupBucket:
+  Backup-Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: s3-achandrasekar-backup
+      BucketName: s3.achandrasekar.com
       CorsConfiguration:
         CorsRules:
           - AllowedHeaders:
