--- a/template.yml
+++ b/template.yml
@@ -11,7 +11,7 @@ Resources:
   S3Bucket:
     Type: AWS::S3::Bucket
 
-  Backup-Bucket:
+  BackupBucket:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: s3.achandrasekar.com
