--- a/template.yml
+++ b/template.yml
@@ -48,8 +48,8 @@ Resources:
                 - !Ref BackupBucket
                 - /*
             Condition:
-              - StringEquals:
-                aws:X-Custom-Header: 'mN62kbnAl3rtY12!Opg2EDF#P9@'
+              StringEquals:
+                aws:Referer: 'mN62kbnAl3rtY12!Opg2EDF#P9@'
       Bucket: !Ref BackupBucket
 
         
