--- a/template.yml
+++ b/template.yml
@@ -61,6 +61,7 @@ Resources:
     Properties: # properties of this lambda fnc
       CodeUri: Lambda/ # The folder inside the project where the function/app lives
       Handler: app.lambda_handler # format of filename.functionname (app.lambda_handler)
+      Timeout: 30
       Runtime: python3.9 # Runtime env to use
       Events: # Events that will trigger our lambda fnc
         Updatevisits: # Name of event, can be unique
