--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ deploy resources:
   stage: deploy
   image: registry.gitlab.com/abhishekcs96/serverless_backend/nodepython:latest
   script:
+    - sam build
     - sam package --output-template-file packaged.yaml --s3-bucket first-sam-app-2nd-actually-s3bucket-1fqra0mlgvqdq
     - sam deploy --template-file packaged.yaml --stack-name first-sam-app-2nd-actually --s3-bucket first-sam-app-2nd-actually-s3bucket-1fqra0mlgvqdq --capabilities CAPABILITY_IAM --region ap-southeast-2 --no-confirm-changeset --no-fail-on-empty-changeset
     
