--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "test": "node node_modules/.bin/jest",
-    "test:watch": "jest --watch"
+    "test:watch": "node node_modules/.bin/jest"
   },
   "repository": {
     "type": "git",
